--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -20,7 +20,7 @@ html.h-full.bg-base[lang="en"]
             div class="font-title inline-flex text-lg md:text-2xl"
               span.lowercase
                 | daisy
-              span.uppercase.text-[#1AD1A5]
+              span class="uppercase text-[#1AD1A5]"
                 | UI
           .mt-10
             = yield
